make questions more readable and remove incorrect/correct message after game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,7 @@ header a{
 button{
     font-size: 20px;
     background-color: purple;
+    justify-self: center;
 }
 .answers{
     display: none;
